<resources>
    <string name="app_name" translatable="false">Taski</string>
    <string name="three_dots" translatable="false">...</string>
    <string name="version">Version %s\n\n© 2021 Vladas Maier</string>
    <string name="theme_default_name">Default</string>
    <string name="theme_sailor_name">Sailor</string>
    <string name="theme_royal_name">Royal</string>
    <string name="theme_mercury_name">Mercury</string>
    <string name="theme_mocca_name">Mocca</string>
    <string name="theme_creeper_name">Creeper</string>
    <string name="theme_flamingo_name">Flamingo</string>
    <string name="theme_pilot_name">Pilot</string>
    <string name="theme_coral_name">Coral</string>
    <string name="theme_blossom_name">Blossom</string>
    <string name="theme_mint_name">Mint</string>
    <plurals name="duration_minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="duration_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="duration_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="duration_week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="duration_year">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="difficulty_trivial_value">trivial</string>
    <string name="difficulty_regular_value">regular</string>
    <string name="difficulty_hard_value">hard</string>
    <string name="difficulty_insane_value">insane</string>
    <string name="unit_minute_short">%d min</string>
    <string name="unit_hour_short">%d h</string>
    <string name="unit_day_short">%d d</string>
    <string name="unit_week_short">%d w</string>
    <string name="unit_year_short">%d y</string>
    <string name="term_xp_value">%d XP</string>
    <string name="term_level_value">Level %d</string>
    <string name="term_due_at">Due at %s</string>
    <string name="term_due_today">Due today</string>
    <string name="term_monday_short">MON</string>
    <string name="term_monday">Monday</string>
    <string name="term_tuesday_short">TUE</string>
    <string name="term_wednesday_short">WED</string>
    <string name="term_thursday_short">THU</string>
    <string name="term_friday_short">FRI</string>
    <string name="term_saturday_short">SAT</string>
    <string name="term_saturday">Saturday</string>
    <string name="term_sunday_short">SUN</string>
    <string name="term_sunday">Sunday</string>
    <string name="term_sort_created_at">creation date</string>
    <string name="term_sort_goal">goal</string>
    <string name="term_sort_duration">duration</string>
    <string name="term_sort_difficulty">difficulty</string>
    <string name="term_sort_xp_gain">experience gain</string>
    <string name="term_sort_due_on">due on</string>
    <string name="term_sort_by">Sorted by : %1$s (%2$s)</string>
    <string name="term_sort_asc">ascending</string>
    <string name="term_sort_desc">descending</string>
    <string name="term_skill_level_increased">%s level increased</string>
    <string name="term_overall_level_increased">Overall level increased</string>
    <string name="term_sort_name">name</string>
    <string name="term_sort_xp">experience</string>
    <string name="term_sort_category">category</string>
    <string name="term_created_at">created at:</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_too_short">Must be at least %d characters long</string>
    <string name="error_skill_already_exists">Such skill already exists</string>
    <string name="error_category_already_exists">Such category already exists</string>
    <string name="event_skill_updated">Skill updated</string>
    <string name="event_skill_deleted">Skill deleted</string>
    <string name="event_task_complete">Task completed (+%d XP)</string>
    <string name="event_task_failed">Task failed</string>
    <string name="event_task_updated">Task updated</string>
    <string name="event_category_deleted">Category deleted</string>
    <string name="action_ok">OK</string>
    <string name="action_undo">Undo</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_proceed_with_delete">Continue</string>
    <string name="action_set">Set</string>
    <string name="action_proceed_with_reset">Continue</string>
    <string name="action_copy">Copy</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_pick_color">Pick color</string>
    <string name="action_edit_name">Edit name</string>
    <string name="heading_create_skill">Create new skill</string>
    <string name="heading_create_task">Create new task</string>
    <string name="heading_duration">Duration</string>
    <string name="heading_difficulty">Difficulty</string>
    <string name="heading_deadline">Deadline</string>
    <string name="heading_tasks">Tasks</string>
    <string name="heading_skills">Skills</string>
    <string name="heading_categories">Categories</string>
    <string name="heading_statistics">Statistics</string>
    <string name="heading_settings">Settings</string>
    <string name="heading_xp_gain">Experience gain</string>
    <string name="heading_task_info">Task information</string>
    <string name="heading_skill_info">Skill information</string>
    <string name="heading_skill_level">Skill level</string>
    <string name="heading_skill_xp">Skill experience</string>
    <string name="heading_skill_xp_title">Skill XP</string>
    <string name="heading_category_xp_title">Category XP</string>
    <string name="heading_daily_xp_title">Daily XP</string>
    <string name="heading_weekly_xp_title">Weekly XP</string>
    <string name="heading_weekly_tasks_title">Done tasks</string>
    <string name="heading_open_tasks">Open tasks</string>
    <string name="heading_done_tasks">Amount of done tasks</string>
    <string name="heading_skill_hours">Amount of invested hours</string>
    <string name="heading_calendar_sync">Calendar synchronization</string>
    <string name="heading_user_name">Name</string>
    <string name="heading_edit_category_name">Edit category name</string>
    <string name="heading_create_category">Create new skill category</string>
    <string name="heading_select_image">Select image</string>
    <string name="heading_visual_prefs">Visual preferences</string>
    <string name="heading_general_settings">General settings</string>
    <string name="heading_help">Help</string>
    <string name="heading_licenses">Licenses</string>
    <string name="heading_version">Version</string>
    <string name="heading_change_avatar">Change avatar</string>
    <string name="heading_reset_avatar">Reset avatar</string>
    <string name="heading_unassigned">Other</string>
    <string name="heading_theme">Theme</string>
    <string name="heading_dark_mode">Dark mode</string>
    <string name="heading_light_mode">Light mode</string>
    <string name="heading_language">Language</string>
    <string name="heading_synchronize_to_calendar">Synchronize with calendar</string>
    <string name="heading_sort_by">Sort by</string>
    <string name="heading_sort_order">Sort order</string>
    <string name="heading_select_theme">Select theme</string>
    <string name="heading_calendar_settings">Calendar settings</string>
    <string name="heading_delete_completed_tasks">Delete completed tasks</string>
    <string name="heading_replay_intro">Replay intro</string>
    <string name="heading_manual">Manual</string>
    <string name="heading_app_manual">Taski Manual</string>
    <string name="heading_no_skills_assigned">No skills assigned</string>
    <plurals name="heading_assigned_skills">
        <item quantity="one">%d assigned skill</item>
        <item quantity="other">%d assigned skills</item>
    </plurals>
    <string name="heading_start_of_the_week">Start of the week</string>
    <string name="hint_skill_name">Name of the skill</string>
    <string name="hint_skill_category">Skill category</string>
    <string name="hint_task_goal">Pursued goal</string>
    <string name="hint_task_details">Details</string>
    <string name="hint_task_due_date">Date</string>
    <string name="hint_task_due_time">Time</string>
    <string name="hint_no_skills">No skills were created yet</string>
    <string name="hint_no_tasks_in_rv">No tasks are available\nclick + to add one</string>
    <string name="hint_no_skills_in_rv">No skills are available\nclick + to add one</string>
    <string name="hint_no_categories_in_rv">No categories are available\nclick + to add one</string>
    <string name="hint_user_name">Type in your username</string>
    <string name="hint_category_name">Type in category name</string>
    <string name="description_calendar_sync">If enabled the application will synchronize all tasks to default calendar</string>
    <string name="description_user_name">Set your name to be shown in navigation menu</string>
    <string name="description_change_avatar">Change user avatar</string>
    <string name="description_reset_avatar">Reset current avatar to default</string>
    <string name="description_no_data">No data available</string>
    <string name="description_select_theme">Select theme</string>
    <string name="description_switch_to_dark">Switch to dark mode</string>
    <string name="description_switch_to_light">Switch to light mode</string>
    <string name="description_select_language">Select language</string>
    <string name="description_delete_completed_tasks">Delete tasks from the calendar when they have been completed</string>
    <string name="description_start_of_the_week">Determines the day on which a new week begins (affects weekly statistics)</string>
    <string name="pick_a_color">Pick a category color</string>
    <string name="pick_task_duration">Pick task duration</string>
    <string name="alert_skill_delete">Delete skill?</string>
    <string name="alert_reset_avatar">Reset avatar?</string>
    <plurals name="alert_assigned_task">
        <item quantity="one">%1$d task is assigned to \"%2$s\" skill</item>
        <item quantity="other">%1$d tasks are assigned to \"%2$s\" skill</item>
    </plurals>
    <string name="alert_permission_required">Permission required</string>
    <string name="alert_calendar_access_required">Permission to access calendar is required for task synchronization</string>
    <string name="alert_category_delete">Delete category?</string>
    <plurals name="alert_assigned_skill">
        <item quantity="one">%1$d skill is assigned to \"%2$s\" category</item>
        <item quantity="other">%1$d skills are assigned to \"%2$s\" category</item>
    </plurals>
    <string name="content_task_icon">task icon</string>
    <string name="content_skill_icon">skill icon</string>
    <string name="content_fab">floating action button</string>
    <string name="content_due_at_icon">due at icon</string>
    <string name="content_user_avatar">avatar</string>
    <string name="content_empty_icon">empty box icon</string>
    <string name="content_category_color">category color</string>
    <string name="content_pick_color_icon">pick color icon</string>
    <string name="content_edit_name_icon">edit name icon</string>
    <string name="content_delete_icon">delete icon</string>
    <string name="content_app_logo">app logo</string>
    <string name="intro_slide_1_top">Welcome to Taski</string>
    <string name="intro_slide_1_bottom">your gamified task scheduler.</string>
    <string name="intro_slide_2_top">Create skills</string>
    <string name="intro_slide_2_bottom">to represent your personal abilities.</string>
    <string name="intro_slide_3_top">Create tasks</string>
</resources>