<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Profile preferences">
        <androidx.preference.EditTextPreference
            android:defaultValue="@string/app_name"
            android:key="user_name"
            android:negativeButtonText="@string/action_cancel"
            android:positiveButtonText="@string/action_set"
            android:summary="@string/description_user_name"
            android:title="@string/heading_user_name"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="General settings">
        <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:key="calendar_sync"
            android:summary="@string/description_calendar_sync"
            android:title="@string/heading_calendar_sync"
            />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>