<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/heading_visual_prefs">
        <androidx.preference.Preference
                android:icon="@drawable/ic_person_24"
                android:key="user_name"
                android:summary="@string/description_user_name"
                android:title="@string/heading_user_name" />
        <androidx.preference.Preference
                android:key="change_avatar"
                android:summary="@string/description_change_avatar"
                android:title="@string/heading_change_avatar" />
        <androidx.preference.Preference
                android:key="reset_avatar"
                android:summary="@string/description_reset_avatar"
                android:title="@string/heading_reset_avatar" />
        <androidx.preference.ListPreference
                android:entries="@array/theme_names_array"
                android:entryValues="@array/theme_values_array"
                android:icon="@drawable/ic_theme_24"
                android:key="app_theme"
                android:summary="Select theme"
                android:title="Theme" />
        <androidx.preference.SwitchPreference
                android:icon="@drawable/ic_dark_mode_24"
                android:key="dark_mode"
                android:summaryOff="Switch to dark mode"
                android:summaryOn="Switch back to light mode"
                android:title="Dark mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/heading_general_settings">
        <androidx.preference.CheckBoxPreference
                android:defaultValue="false"
                android:icon="@drawable/ic_baseline_calendar_today_24"
                android:key="calendar_sync"
                android:summary="@string/description_calendar_sync"
                android:title="@string/heading_calendar_sync" />
        <androidx.preference.ListPreference
                android:entries="@array/language_names_array"
                android:entryValues="@array/language_values_array"
                android:icon="@drawable/ic_language_24"
                android:key="app_language"
                android:summary="Select language"
                android:title="Language" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>