<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorPrimary">

            <LinearLayout
                android:id="@+id/category_pick_color"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/category_edit_name"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/content_pick_color_icon"
                    android:src="@drawable/ic_color_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/action_pick_color"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_edit_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/category_delete"
                app:layout_constraintStart_toEndOf="@+id/category_pick_color">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/content_edit_name_icon"
                    android:src="@drawable/ic_edit_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/action_edit_name"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/category_edit_name">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/content_delete_icon"
                    android:src="@drawable/ic_delete_24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/action_delete"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>