<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.tasks.TaskCreateFragment"
            >

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:text="@string/heading_create_skill"
                    android:singleLine="true"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="28dp"
                    app:autoSizeMinTextSize="20dp"
                    app:autoSizeStepGranularity="2dp"
                    app:autoSizeTextType="uniform"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoSizeTextType="uniform"
                android:hint="@string/hint_skill_name"
                android:inputType="textCapSentences|textAutoCorrect"
                android:maxLength="24"
                android:singleLine="true"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/icon_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                />

            <AutoCompleteTextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autoSizeTextType="uniform"
                android:hint="@string/hint_skill_category"
                android:inputType="textCapSentences|textAutoCorrect"
                android:maxLength="24"
                android:singleLine="true"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                />

            <ImageButton
                android:id="@+id/icon_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:onClick="selectIconButtonClicked"
                app:layout_constraintBottom_toBottomOf="@+id/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name"
                tools:background="@drawable/ic_baseline_assignment_24"
                tools:backgroundTint="@color/colorSecondary"
                />

            <Button
                android:id="@+id/create_skill_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/action_create"
                app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toTopOf="@+id/cancel_button"
                />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/action_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/create_skill_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintVertical_bias="1.0"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>